samples/_failures_safe/1761071804_158e22_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6e0dccb.c: In function ‘main’:
./samples/SAFE/__tmp_b6e0dccb.c:156:5: error: expected expression at end of input
  156 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_b6e0dccb.c:156:5: error: expected declaration or statement at end of input
